[package]
name = "turn-off-screen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]

[dependencies.windows-sys]
version = "0.28.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]